@@ -1,3 +1,9 @@
+2008-08-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/plugins/pythonconsole/pythonconsole.py (show_console):
+	Only mark the actual printed string for translation, not the whole
+	python statement for eval (Closes: #548004)
+
 2008-08-19  Bastien Nocera  <hadess@hadess.net>
 
 	* browser-plugin/totem-plugin-viewer.c (entry_parsed):
